Fix and test