@@ -7,13 +7,10 @@ import com.sun.source.tree.VariableTree;
 import com.sun.source.util.TreePath;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-import org.checkerframework.checker.nullness.qual.Nullable;
 import org.checkerframework.common.basetype.BaseTypeChecker;
 import org.checkerframework.common.basetype.BaseTypeVisitor;
 import org.checkerframework.framework.util.typeinference8.InvocationTypeInference;
@@ -27,12 +24,16 @@ import org.checkerframework.framework.util.typeinference8.util.Theta;
  * Tests {@link Dependencies}, in particular that {@code Dependencies.get} tolerates a variable that
  * is not a key of the underlying map.
  *
- * <p>JLS 18.4 says that an inference variable depends on the resolution of itself, so the
- * dependencies of a variable about which nothing has been recorded are that variable alone. Before
- * the fix, {@code Dependencies.get} threw a {@code NullPointerException} for such a variable.
- * {@code Resolution.getSmallestDependencySet} and {@code ConstraintSet.getClosedSubset} both call
- * {@code Dependencies.get} with variables that the bound set that created the {@code Dependencies}
- * does not necessarily contain.
+ * <p>JLS 18.4 says that an inference variable depends on the resolution of itself, so {@code
+ * Dependencies.get} always includes the queried variable in its result, and the dependencies of a
+ * variable about which nothing has been recorded are that variable alone. Before the fix, {@code
+ * Dependencies.get} threw a {@code NullPointerException} for such a variable. {@code
+ * Resolution.getSmallestDependencySet} and {@code ConstraintSet.getClosedSubset} both call {@code
+ * Dependencies.get} with variables that the bound set that created the {@code Dependencies} does
+ * not necessarily contain.
+ *
+ * <p>Each test method throws an {@code AssertionError} on failure, so that the stack trace points
+ * at the failing check.
  *
  * <p>The tests are driven by the declarations in {@code
  * framework/tests/typeinference8dependencies/Typeinference8Dependencies.java}.
@@ -66,25 +67,19 @@ public class DependenciesVisitor extends BaseTypeVisitor<DependenciesAnnotatedTy
       return;
     }
 
-    // The two inference variables, for the type variables Z1 and Z2 of Holder.
-    Iterator<Variable> variables = createVariables(classTree).iterator();
-    Variable alpha = variables.next();
-    Variable beta = variables.next();
+    // The three inference variables, for the type variables Z1, Z2, and Z3 of Holder.
+    List<Variable> variables = createVariables(classTree);
+    Variable alpha = variables.get(0);
+    Variable beta = variables.get(1);
+    Variable gamma = variables.get(2);
 
     testsRan = true;
 
-    List<String> failures = new ArrayList<>();
-    testUnknownVariable(alpha, failures);
-    testResultIsMutable(alpha, failures);
-    testUnknownVariablesInList(alpha, beta, failures);
-    testKnownVariable(alpha, beta, failures);
-
-    if (!failures.isEmpty()) {
-      throw new AssertionError(
-          "Dependencies.get does not handle an unknown variable:"
-              + System.lineSeparator()
-              + String.join(System.lineSeparator(), failures));
-    }
+    testUnknownVariable(alpha);
+    testResultIsMutable(alpha);
+    testUnknownVariablesInList(alpha, beta);
+    testMixedVariablesInList(alpha, beta, gamma);
+    testKnownVariable(alpha, beta);
   }
 
   // ///////////////////////////////////////////////////////////////////////////
@@ -95,13 +90,12 @@ public class DependenciesVisitor extends BaseTypeVisitor<DependenciesAnnotatedTy
    * The dependencies of a variable that is not in the map are that variable alone.
    *
    * @param alpha a variable
-   * @param failures the list to which to add a description of a failure
    */
-  private void testUnknownVariable(Variable alpha, List<String> failures) {
+  private static void testUnknownVariable(Variable alpha) {
     Dependencies dependencies = new Dependencies();
-    Set<Variable> actual = get(dependencies, alpha, "an empty Dependencies", failures);
-    if (actual != null && !actual.equals(Collections.singleton(alpha))) {
-      failures.add(
+    Set<Variable> actual = dependencies.get(alpha);
+    if (!actual.equals(Collections.singleton(alpha))) {
+      throw new AssertionError(
           "get("
               + alpha
               + ") on an empty Dependencies returned "
@@ -112,28 +106,14 @@ public class DependenciesVisitor extends BaseTypeVisitor<DependenciesAnnotatedTy
 
   /**
    * The result of {@code Dependencies.get} must be mutable, because {@code
-   * Resolution.getSmallestDependencySet} removes the resolved variables from it.
+   * Resolution.getSmallestDependencySet} removes the resolved variables from it. This method throws
+   * {@code UnsupportedOperationException} if the result is immutable.
    *
    * @param alpha a variable
-   * @param failures the list to which to add a description of a failure
    */
-  private void testResultIsMutable(Variable alpha, List<String> failures) {
+  private static void testResultIsMutable(Variable alpha) {
     Dependencies dependencies = new Dependencies();
-    Set<Variable> actual = get(dependencies, alpha, "an empty Dependencies", failures);
-    if (actual == null) {
-      return;
-    }
-    try {
-      actual.removeAll(Collections.singletonList(alpha));
-    } catch (Throwable t) {
-      failures.add(
-          "removing from the result of get("
-              + alpha
-              + ") on an empty Dependencies threw "
-              + t.getClass().getName()
-              + ": "
-              + t);
-    }
+    dependencies.get(alpha).removeAll(Collections.singletonList(alpha));
   }
 
   /**
@@ -141,33 +121,18 @@ public class DependenciesVisitor extends BaseTypeVisitor<DependenciesAnnotatedTy
    *
    * @param alpha a variable
    * @param beta a different variable
-   * @param failures the list to which to add a description of a failure
    */
-  private void testUnknownVariablesInList(Variable alpha, Variable beta, List<String> failures) {
+  private static void testUnknownVariablesInList(Variable alpha, Variable beta) {
     Dependencies dependencies = new Dependencies();
-    Set<Variable> actual;
-    try {
-      actual = dependencies.get(Arrays.asList(alpha, beta));
-    } catch (Throwable t) {
-      failures.add(
-          "get(List.of("
-              + alpha
-              + ", "
-              + beta
-              + ")) on an empty Dependencies threw "
-              + t.getClass().getName()
-              + ": "
-              + t);
-      return;
-    }
+    Set<Variable> actual = dependencies.get(Arrays.asList(alpha, beta));
     Set<Variable> expected = new LinkedHashSet<>(Arrays.asList(alpha, beta));
     if (!actual.equals(expected)) {
-      failures.add(
-          "get(List.of("
+      throw new AssertionError(
+          "get(["
               + alpha
               + ", "
               + beta
-              + ")) on an empty Dependencies returned "
+              + "]) on an empty Dependencies returned "
               + actual
               + " rather than "
               + expected);
@@ -175,20 +140,45 @@ public class DependenciesVisitor extends BaseTypeVisitor<DependenciesAnnotatedTy
   }
 
   /**
-   * A variable that is in the map is unaffected: its dependencies are the ones that were added.
+   * The list overload of {@code Dependencies.get} handles a list that mixes a variable that is in
+   * the map with one that is not. {@code ConstraintSet.getClosedSubset} passes such lists.
+   *
+   * @param alpha a variable, which is in the map
+   * @param beta a different variable, which is a recorded dependency of {@code alpha}
+   * @param gamma a third variable, which is not in the map
+   */
+  private static void testMixedVariablesInList(Variable alpha, Variable beta, Variable gamma) {
+    Dependencies dependencies = new Dependencies();
+    dependencies.putOrAdd(alpha, beta);
+    Set<Variable> actual = dependencies.get(Arrays.asList(alpha, gamma));
+    Set<Variable> expected = new LinkedHashSet<>(Arrays.asList(alpha, beta, gamma));
+    if (!actual.equals(expected)) {
+      throw new AssertionError(
+          "get([" + alpha + ", " + gamma + "]) returned " + actual + " rather than " + expected);
+    }
+  }
+
+  /**
+   * The dependencies of a variable that is in the map are the recorded ones plus the variable
+   * itself.
    *
    * @param alpha a variable
    * @param beta a different variable
-   * @param failures the list to which to add a description of a failure
    */
-  private void testKnownVariable(Variable alpha, Variable beta, List<String> failures) {
+  private static void testKnownVariable(Variable alpha, Variable beta) {
     Dependencies dependencies = new Dependencies();
     dependencies.putOrAdd(alpha, beta);
-    Set<Variable> actual =
-        get(dependencies, alpha, "a Dependencies in which it is a key", failures);
-    if (actual != null && !actual.equals(Collections.singleton(beta))) {
-      failures.add(
-          "get(" + alpha + ") returned " + actual + " rather than the recorded dependency " + beta);
+    Set<Variable> actual = dependencies.get(alpha);
+    Set<Variable> expected = new LinkedHashSet<>(Arrays.asList(alpha, beta));
+    if (!actual.equals(expected)) {
+      throw new AssertionError(
+          "get("
+              + alpha
+              + ") returned "
+              + actual
+              + " rather than "
+              + expected
+              + ", which is the recorded dependency plus the variable itself");
     }
   }
 
@@ -197,48 +187,28 @@ public class DependenciesVisitor extends BaseTypeVisitor<DependenciesAnnotatedTy
   //
 
   /**
-   * Returns {@code dependencies.get(alpha)}, or null after adding to {@code failures} if the call
-   * throws.
-   *
-   * @param dependencies the dependencies to query
-   * @param alpha the variable to query
-   * @param description a description of {@code dependencies}
-   * @param failures the list to which to add a description of a failure
-   * @return {@code dependencies.get(alpha)}, or null if the call threw
-   */
-  private @Nullable Set<Variable> get(
-      Dependencies dependencies, Variable alpha, String description, List<String> failures) {
-    try {
-      return dependencies.get(alpha);
-    } catch (Throwable t) {
-      failures.add(
-          "get(" + alpha + ") on " + description + " threw " + t.getClass().getName() + ": " + t);
-      return null;
-    }
-  }
-
-  /**
    * Creates the inference variables that the tests use: one for each type parameter of the class
    * {@code Holder} of the test input.
    *
    * @param classTree the class tree of the test input
-   * @return two distinct inference variables
+   * @return three distinct inference variables
    */
-  private Collection<Variable> createVariables(ClassTree classTree) {
+  private List<Variable> createVariables(ClassTree classTree) {
     TreePath classPath = atypeFactory.getPath(classTree);
     // The InvocationTypeInference is needed only because Java8InferenceContext requires one.
     InvocationTypeInference inference = new InvocationTypeInference(atypeFactory, classPath);
     Java8InferenceContext context = new Java8InferenceContext(atypeFactory, classPath, inference);
-    // `Holder<String, String>`; its type parameters Z1 and Z2 become the inference variables.
+    // `Holder<String, String, String>`; its type parameters Z1, Z2, and Z3 become the inference
+    // variables.
     ProperType holderType = new ProperType(field(classTree, "holder"), context);
     LambdaExpressionTree thetaKey =
         (LambdaExpressionTree) field(classTree, "thetaKeyLambda").getInitializer();
     Theta theta = context.inferenceTypeFactory.createThetaForLambda(thetaKey, holderType);
-    if (theta.size() != 2) {
+    if (theta.size() != 3) {
       throw new AssertionError(
-          "Test input is wrong: expected 2 inference variables, found " + theta.values());
+          "Test input is wrong: expected 3 inference variables, found " + theta.values());
     }
-    return theta.values();
+    return new ArrayList<>(theta.values());
   }
 
   /**
